// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Friends model test addFriends# method tests should be able to add and connect friends 1`] = `
Array [
  Object {
    "blocked": Array [],
    "friends": Array [
      "test2@test.com",
      "test3@test.com",
    ],
    "subscribers": Array [],
    "userEmail": "test1@test.com",
  },
  Object {
    "blocked": Array [],
    "friends": Array [
      "test1@test.com",
      "test3@test.com",
      "test_doestnot_exist@test.com",
    ],
    "subscribers": Array [],
    "userEmail": "test2@test.com",
  },
  Object {
    "blocked": Array [],
    "friends": Array [
      "test1@test.com",
      "test2@test.com",
    ],
    "subscribers": Array [],
    "userEmail": "test3@test.com",
  },
]
`;

exports[`Friends model test block# method tests should be able to set the subcription 1`] = `
Object {
  "n": 1,
  "nModified": 1,
  "ok": 1,
}
`;

exports[`Friends model test block# method tests should be able to set the subcription 2`] = `
Array [
  Object {
    "blocked": Array [
      "test2@test.com",
    ],
    "friends": Array [],
    "subscribers": Array [],
    "userEmail": "test1@test.com",
  },
]
`;

exports[`Friends model test getAllFriends# method tests should be able to retrive friends 1`] = `
Array [
  "test2@test.com",
  "test3@test.com",
]
`;

exports[`Friends model test getAllFriends# method tests should be able to retrive friends 2`] = `
Array [
  "test1@test.com",
  "test3@test.com",
]
`;

exports[`Friends model test getAllFriends# method tests should be able to retrive friends 3`] = `
Array [
  "test1@test.com",
  "test2@test.com",
]
`;

exports[`Friends model test getCommonFriends# method tests should be able to retrieve common friends 1`] = `
Array [
  "test2@test.com",
]
`;

exports[`Friends model test getCommonFriends# method tests should be not be able to retrieve common friends 1`] = `Array []`;

exports[`Friends model test subscribe# method tests should be able to set the subcription 1`] = `
Object {
  "n": 1,
  "nModified": 1,
  "ok": 1,
}
`;

exports[`Friends model test subscribe# method tests should be able to set the subcription 2`] = `
Array [
  Object {
    "blocked": Array [],
    "friends": Array [],
    "subscribers": Array [
      "test2@test.com",
    ],
    "userEmail": "test1@test.com",
  },
]
`;
